added styles for application table

--- a/src/containers/AccountSetting/SettingPage.css
+++ b/src/containers/AccountSetting/SettingPage.css
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+/* Section */
 .section-name {
   font-size: 13px;
   line-height: 15px;
