styled table striped background

--- a/src/containers/Dashboard/Dashboard.css
+++ b/src/containers/Dashboard/Dashboard.css
@@ -61,6 +61,10 @@ table .spacer {
   letter-spacing: 0.2px;
   color: #737373;
 }
+
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: rgb(248, 247, 246) !important;
+}
 .application-table table tbody td {
   font-size: 14px;
   line-height: 19px;
@@ -69,7 +73,7 @@ table .spacer {
   color: #240f00;
   vertical-align: middle;
 }
-.dropdown a {
+.dashboard .dropdown a {
   font-size: 13px;
   font-weight: 100;
   color: #4d0032;
