--- a/src/containers/AccountSetting/SettingPage.css
+++ b/src/containers/AccountSetting/SettingPage.css
@@ -41,10 +41,14 @@ form input {
   border-radius: 2px !important;
   border-color: #f58634;
   background: #f58634;
+  outline: none;
 }
-[type="submit"]:hover {
-  border-color: #f58634;
-  background: #f58634;
+[type="submit"]:hover,
+[type="submit"]:focus,
+[type="submit"]:active {
+  border-color: #f58634 !important;
+  background: #f58634 !important;
+  box-shadow: none !important;
 }
 .setting-card {
   box-shadow: 1px 0px 12px rgba(0, 0, 0, 0.1);
